[gd_scene load_steps=3 format=3 uid="uid://ccw4qq2b0y87u"]

[ext_resource type="Script" uid="uid://bkj8qpl1ubi67" path="res://clicker_box.gd" id="1_8ry5f"]
[ext_resource type="Theme" uid="uid://dfelcb10ewua1" path="res://theme.tres" id="1_vqjli"]

[node name="ClickerBox" type="VBoxContainer"]
script = ExtResource("1_8ry5f")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_vqjli")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/CenterContainer"]
layout_mode = 2
text = "[Clicker Type]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/PanelContainer2"]
layout_mode = 2
text = "+"

[node name="PanelContainer3" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/PanelContainer3"]
layout_mode = 2
theme = ExtResource("1_vqjli")

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer3/MarginContainer/CenterContainer"]
layout_mode = 2
text = "[Clicker Icons]"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/PanelContainer2/Button" to="." method="_on_button_pressed"]
